<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:elevation="@dimen/_2sdp"
    android:layout_marginTop="@dimen/_100sdp"
    android:clickable="true"
    tools:context=".Fragments.Form_From">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_300sdp"
        android:background="#fff"
        android:elevation="@dimen/_2sdp"
        android:clickable="true"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_30sdp"
        tools:context=".Fragments.Form_From">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:drawableStart="@drawable/ic_address"
        android:paddingStart="@dimen/_5sdp"
        android:drawablePadding="@dimen/_5sdp"
        android:paddingEnd="@dimen/_5sdp"
        android:text="@string/address"
        android:maxLines="1"
        android:ellipsize="end"
        android:gravity="center_vertical"
        android:background="@android:color/transparent"
        android:id="@+id/T_Address"
        android:textColor="#828282"
        android:drawableEnd="@drawable/ic_map"
        />
    <View
        android:layout_width="match_parent"
        android:background="#f0f0f0"
        android:id="@+id/view1"
        android:layout_below="@+id/T_Address"
        android:layout_height="@dimen/_1sdp"/>

    <EditText
        android:id="@+id/E_TypeHouse"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_below="@+id/view1"
        android:paddingStart="@dimen/_5sdp"
        android:paddingEnd="@dimen/_5sdp"
        android:inputType="text"
        android:textSize="@dimen/_12sdp"
        android:background="@android:color/transparent"
        android:hint="@string/typehouse"
        android:textColor="@color/grey"
        android:textColorHint="@color/grey"
        />
    <View
        android:layout_width="match_parent"
        android:background="#f0f0f0"
        android:id="@+id/view2"
        android:layout_below="@+id/E_TypeHouse"
        android:layout_height="@dimen/_1sdp"/>

    <EditText
        android:id="@+id/E_NoRoom"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_below="@+id/view2"
        android:paddingStart="@dimen/_5sdp"
        android:paddingEnd="@dimen/_5sdp"
        android:inputType="number"
        android:textSize="@dimen/_12sdp"
        android:background="@android:color/transparent"
        android:hint="@string/no_room"
        android:textColor="@color/grey"
        android:textColorHint="@color/grey"
        />
    <View
        android:layout_width="match_parent"
        android:background="#f0f0f0"
        android:id="@+id/view3"
        android:layout_below="@+id/E_NoRoom"
        android:layout_height="@dimen/_1sdp"/>
    <EditText
        android:id="@+id/E_Floor"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_below="@+id/view3"
        android:inputType="number"
        android:paddingStart="@dimen/_5sdp"
        android:paddingEnd="@dimen/_5sdp"
        android:textSize="@dimen/_12sdp"
        android:background="@android:color/transparent"
        android:hint="@string/floor"
        android:textColor="@color/grey"
        android:textColorHint="@color/grey"
        />
    <View
        android:layout_width="match_parent"
        android:background="#f0f0f0"
        android:id="@+id/view4"
        android:layout_below="@+id/E_Floor"
        android:layout_height="@dimen/_1sdp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:gravity="center_vertical"
        android:layout_marginStart="@dimen/_5sdp"
        android:id="@+id/T_lift"
        android:textSize="@dimen/_11sdp"
        android:layout_below="@+id/view4"
        android:text="@string/lift"
        />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:gravity="center_vertical"
        android:buttonTint="@color/blue"
        android:backgroundTint="#2943a4"
        android:id="@+id/Check_Eluvator"
        android:layout_toEndOf="@+id/T_lift"
        android:layout_below="@+id/view4"
        />

    <View
        android:layout_width="match_parent"
        android:background="#f0f0f0"
        android:id="@+id/view5"
        android:layout_below="@+id/T_lift"
        android:layout_height="@dimen/_1sdp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/_80sdp"
        android:hint="@string/nots"
        android:background="@android:color/transparent"
        android:gravity="top"
        android:textColor="#959595"
        android:textColorHint="#959595"
        android:paddingStart="@dimen/_5sdp"
        android:paddingTop="@dimen/_5sdp"
        android:id="@+id/E_Notes"
        android:textSize="@dimen/_12sdp"
        android:layout_below="@+id/view5" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</androidx.core.widget.NestedScrollView>