<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/Rela_Home"
    tools:context=".Fragments.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">



    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/_15sdp"
        app:cardCornerRadius="@dimen/_5sdp"
        app:cardElevation="1dp"
        android:id="@+id/Card_Furntiure"
        android:layout_marginStart="@dimen/_3sdp"
        android:layout_marginEnd="@dimen/_3sdp"
        android:layout_height="@dimen/_110sdp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/img_furinture"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textColor="#fff"
                android:textStyle="bold"
                android:textSize="@dimen/_16sdp"
                android:text="@string/furntiure"
                />


        </RelativeLayout>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/_5sdp"
        app:cardCornerRadius="@dimen/_5sdp"
        app:cardElevation="1dp"
        android:id="@+id/Card_Tailer"
        android:layout_below="@+id/Card_Furntiure"
        android:layout_marginStart="@dimen/_3sdp"
        android:layout_marginEnd="@dimen/_3sdp"
        android:layout_height="@dimen/_110sdp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/img_tailer"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textColor="#fff"
                android:textStyle="bold"
                android:textSize="@dimen/_16sdp"
                android:text="@string/trailer"
                />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

     <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/_5sdp"
        app:cardCornerRadius="@dimen/_5sdp"
        app:cardElevation="1dp"
        android:id="@+id/Card_LightTailer"
        android:layout_below="@+id/Card_Tailer"
        android:layout_marginStart="@dimen/_3sdp"
        android:layout_marginEnd="@dimen/_3sdp"
        android:layout_height="@dimen/_110sdp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/img_lighttrailer"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textColor="#fff"
                android:textStyle="bold"
                android:textSize="@dimen/_16sdp"
                android:text="@string/l_trailter"
                />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/_5sdp"
        app:cardCornerRadius="@dimen/_5sdp"
        app:cardElevation="1dp"
        android:id="@+id/Card_Pickup"
        android:layout_below="@+id/Card_LightTailer"
        android:layout_marginStart="@dimen/_3sdp"
        android:layout_marginEnd="@dimen/_3sdp"
        android:layout_height="@dimen/_110sdp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/img_pickup"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textColor="#fff"
                android:textStyle="bold"
                android:textSize="@dimen/_16sdp"
                android:text="@string/pickup"
                />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/_5sdp"
        app:cardCornerRadius="@dimen/_5sdp"
        app:cardElevation="1dp"
        android:id="@+id/Card_Flat"
        android:layout_below="@+id/Card_Pickup"
        android:layout_marginStart="@dimen/_3sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_3sdp"
        android:layout_height="@dimen/_110sdp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/flattrack"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textColor="#fff"
                android:textStyle="bold"
                android:textSize="@dimen/_16sdp"
                android:text="@string/flattruck"
                />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>